--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
+can be done has
+# Game over, refresh to play again
 
 <script>
   // Initialization
